@@ -24,7 +24,9 @@ ___
 >...  
 
 было бы хорошо показать какие цифры выбирать или написать, что выбрать значение по умолчанию.
+    
 ___
+      
 > Например, стартер web добавляет Tomcat и Spring MVC
 
 Выше нигде не сказано, что такое Tomcat и Spring MVC
@@ -38,7 +40,9 @@ ___
 ```
 
 Хорошо бы поставить `public String home() {...` чтобы явно показать, что это открытый эндпоинт, хотя это и не критично но мне кажется хороший тон писать модификаторы доступа.
+   
 ___
+   
 **Аннотации**
 ```
 @AllArgsConstructor
@@ -50,12 +54,16 @@ public class PostsController {
 .......
 ```
 тут @Autowired и @AllArgsConstructor делают одно и тоже, наверное стоит `@Autowired` убрать 
+   
 ___
+   
 >Добавим в @LogExecutionTime два параметра. Первый временно выключит логирование, а второй задаст минимальное время выполнения, ниже которого логировать не нужно:
 
 Где прописано как enabled() отключает логгирование и threshold() деалет пороговое время? Нет кода этих анотации. Наверное стоит указать, что сам код мы пока что не приводим для упрощения.
 А то создается впечатление, что просто указав enabled() мы волшебным путем отключаем логгирование и про threshold() тоже самое.
+   
 ___
+    
 **HTTP и CRUD приложения**
 ```
     if (maybePage.isPresent()) {
@@ -66,7 +74,9 @@ ___
     }
 ```
 такая проверка `if (maybePage.isPresent())` и .get() считается не очень хорошим вариантом. Лучше добавить в стрим `.orElseThrow(() -> new RuntimeException("Page not found"));` вместо if.
+    
 ___
+   
 
 ```
     @PutMapping("/pages/{id}") // Обновление страницы
@@ -96,8 +106,9 @@ ___
             maybePage.setBody(data.getBody());
             return maybePage;
 ```
+   
 ___
-
+   
 **REST API в Spring Boot**
 
 Тесты
@@ -204,7 +215,7 @@ make: *** Waiting for unfinished jobs....
 make: *** wait: No child processes.  Stop.
 ```
 
-похоже проблема в Makefile 
+в Makefile убоал  -o -q и тесты прошли
 
 ```
 test:
@@ -212,8 +223,9 @@ test:
 ```
 
 Получается что задание пройти невозможно.
-__
-
+   
+___
+    
 **Возможности JPA Repository**
     
 Тоже самое, убрать все про запуск приложения.
@@ -223,7 +235,7 @@ __
     
 В задании ниже не написано что надо написать в application.yml а файл есть и там есть //BEGIN //END
    
-__
+___
 
 
 **Инверсия зависимостей**
@@ -244,7 +256,7 @@ Starting audit...
 [ERROR] /usr/src/app/src/test/java/io/hexlet/ApplicationTest.java:101:13: '}' at column 13 should be alone on a line. [RightCurly]
 [ERROR] /usr/src/app/src/test/java/io/hexlet/ApplicationTest.java:101:14: Empty statement. [EmptyStatement]
 ```
-__
+___
 
 **Бины и область видимости**
 
@@ -252,7 +264,7 @@ WelcomeController.java - написано  `@GetMapping(path = "")` но не в
 
  Тоже самое, убрать все про запуск приложения  и так же не может завершится, Линтер ругается на тесты
 
-__ 
+___
 
 **Интеграционные тесты**
 
@@ -328,4 +340,183 @@ public class JacksonConfig {
    
 ___
 
-   
+**Связь «Один ко многим»***
+
+Проверка не проходит, `status: finished → Упс, что то пошло не так, код работал слишком долго и был остановлен. Проверьте условия выхода из циклов.`
+если убрать `-o -q \` в Makefile, запустить, все успешно проходит, потом вернуть `-o -q \` то потом тожe все успешно проходит.
+
+<details><summary>Вот лог когда тест не прошел </summary>
+
+Testing
+make: Entering directory '/usr/src/app'
+09:17:25.744 [org.junit.platform.console.ConsoleLauncher.main()] INFO org.springframework.test.context.support.AnnotationConfigContextLoaderUtils -- Could not detect default configuration classes for test class [io.hexlet.controller.UserControllerTest]: UserControllerTest does not declare any static, non-private, non-final, nested classes annotated with @Configuration.
+09:17:25.966 [org.junit.platform.console.ConsoleLauncher.main()] INFO org.springframework.boot.test.context.SpringBootTestContextBootstrapper -- Found @SpringBootConfiguration io.hexlet.Application for test class io.hexlet.controller.UserControllerTest
+09:17:26.062 [org.junit.platform.console.ConsoleLauncher.main()] INFO org.springframework.boot.devtools.restart.RestartApplicationListener -- Restart disabled due to context in which it is running
+2025-09-01T09:17:26.580Z  INFO 406 --- [Launcher.main()] i.hexlet.controller.UserControllerTest   : Starting UserControllerTest using Java 21.0.4 with PID 406 (started by tirion in /usr/src/app)
+2025-09-01T09:17:26.582Z  INFO 406 --- [Launcher.main()] i.hexlet.controller.UserControllerTest   : The following 1 profile is active: "test"
+Mockito is currently self-attaching to enable the inline-mock-maker. This will no longer work in future releases of the JDK. Please add Mockito as an agent to your build what is described in Mockito's documentation: https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html#0.3
+WARNING: A Java agent has been loaded dynamically (/maven/.m2/repository/net/bytebuddy/byte-buddy-agent/1.15.11/byte-buddy-agent-1.15.11.jar)
+WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+make: *** [Makefile:13: test] Terminated
+2025-09-01T09:17:27.952Z  WARN 406 --- [Launcher.main()] o.s.w.c.s.GenericWebApplicationContext   : Exception encountered during context initialization - cancelling refresh attempt: java.lang.IllegalStateException: Could not initialize plugin: interface org.mockito.plugins.MockMaker (alternate: null)
+
+</details>  
+
+<details><summary>А это лог когда тест прошел со второго раза </summary>
+
+Testing
+make: Entering directory '/usr/src/app'
+09:25:24.894 [org.junit.platform.console.ConsoleLauncher.main()] INFO org.springframework.test.context.support.AnnotationConfigContextLoaderUtils -- Could not detect default configuration classes for test class [io.hexlet.controller.UserControllerTest]: UserControllerTest does not declare any static, non-private, non-final, nested classes annotated with @Configuration.
+09:25:25.091 [org.junit.platform.console.ConsoleLauncher.main()] INFO org.springframework.boot.test.context.SpringBootTestContextBootstrapper -- Found @SpringBootConfiguration io.hexlet.Application for test class io.hexlet.controller.UserControllerTest
+09:25:25.225 [org.junit.platform.console.ConsoleLauncher.main()] INFO org.springframework.boot.devtools.restart.RestartApplicationListener -- Restart disabled due to context in which it is running
+2025-09-01T09:25:25.823Z  INFO 739 --- [Launcher.main()] i.hexlet.controller.UserControllerTest   : Starting UserControllerTest using Java 21.0.4 with PID 739 (started by tirion in /usr/src/app)
+2025-09-01T09:25:25.825Z  INFO 739 --- [Launcher.main()] i.hexlet.controller.UserControllerTest   : The following 1 profile is active: "test"
+Mockito is currently self-attaching to enable the inline-mock-maker. This will no longer work in future releases of the JDK. Please add Mockito as an agent to your build what is described in Mockito's documentation: https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html#0.3
+WARNING: A Java agent has been loaded dynamically (/maven/.m2/repository/net/bytebuddy/byte-buddy-agent/1.15.11/byte-buddy-agent-1.15.11.jar)
+WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
+2025-09-01T09:25:28.117Z  INFO 739 --- [Launcher.main()] i.hexlet.controller.UserControllerTest   : Started UserControllerTest in 2.897 seconds (process running for 7.289)
+2025-09-01T09:25:28.189Z  INFO 739 --- [Launcher.main()] o.s.b.t.m.w.SpringBootMockServletContext : Initializing Spring TestDispatcherServlet ''
+2025-09-01T09:25:28.189Z  INFO 739 --- [Launcher.main()] o.s.t.web.servlet.TestDispatcherServlet  : Initializing Servlet ''
+2025-09-01T09:25:28.327Z  INFO 739 --- [Launcher.main()] o.s.t.web.servlet.TestDispatcherServlet  : Completed initialization in 136 ms
+2025-09-01T09:25:28.791Z  INFO 739 --- [Launcher.main()] t.c.s.AnnotationConfigContextLoaderUtils : Could not detect default configuration classes for test class [io.hexlet.controller.TaskControllerTest]: TaskControllerTest does not declare any static, non-private, non-final, nested classes annotated with @Configuration.
+2025-09-01T09:25:28.804Z  INFO 739 --- [Launcher.main()] .b.t.c.SpringBootTestContextBootstrapper : Found @SpringBootConfiguration io.hexlet.Application for test class io.hexlet.controller.TaskControllerTest
+2025-09-01T09:25:28.809Z  INFO 739 --- [Launcher.main()] o.s.b.d.r.RestartApplicationListener     : Restart disabled due to context in which it is running
+2025-09-01T09:25:28.852Z  INFO 739 --- [Launcher.main()] i.hexlet.controller.TaskControllerTest   : Starting TaskControllerTest using Java 21.0.4 with PID 739 (started by tirion in /usr/src/app)
+2025-09-01T09:25:28.852Z  INFO 739 --- [Launcher.main()] i.hexlet.controller.TaskControllerTest   : The following 1 profile is active: "test"
+2025-09-01T09:25:29.230Z  INFO 739 --- [Launcher.main()] i.hexlet.controller.TaskControllerTest   : Started TaskControllerTest in 0.421 seconds (process running for 8.402)
+2025-09-01T09:25:29.241Z  INFO 739 --- [Launcher.main()] o.s.b.t.m.w.SpringBootMockServletContext : Initializing Spring TestDispatcherServlet ''
+2025-09-01T09:25:29.241Z  INFO 739 --- [Launcher.main()] o.s.t.web.servlet.TestDispatcherServlet  : Initializing Servlet ''
+2025-09-01T09:25:29.254Z  INFO 739 --- [Launcher.main()] o.s.t.web.servlet.TestDispatcherServlet  : Completed initialization in 13 ms
+
+Thanks for using JUnit! Support its development at https://junit.org/sponsoring
+
+╷
+├─ JUnit Jupiter ✔
+│  ├─ UserControllerTest ✔
+│  │  ├─ testIndex() ✔
+│  │  ├─ testShow() ✔
+│  │  └─ testCreate() ✔
+│  └─ TaskControllerTest ✔
+│     ├─ testIndex() ✔
+│     ├─ testShow() ✔
+│     ├─ testDestroy() ✔
+│     ├─ testCreate() ✔
+│     └─ testUpdate() ✔
+├─ JUnit Vintage ✔
+└─ JUnit Platform Suite ✔
+
+Test run finished after 4842 ms
+[         5 containers found      ]
+[         0 containers skipped    ]
+[         5 containers started    ]
+[         0 containers aborted    ]
+[         5 containers successful ]
+[         0 containers failed     ]
+[         8 tests found           ]
+[         0 tests skipped         ]
+[         8 tests started         ]
+[         0 tests aborted         ]
+[         8 tests successful      ]
+[         0 tests failed          ]
+
+make: Leaving directory '/usr/src/app'
+
+</details>  
+___
+
+**CRUD на Spring Boot**
+
+```
+Чтобы этот код заработал, необходимо внедрить общий базовый интерфейс для всех моделей, на который маппер мог бы ориентироваться и понимать, применять метод toEntity(). Мы назовем его BaseEntity:
+```
+
+Очень поверхностно написано,  зачем надо BaseEntity? как работает этот мэппер? хотелось бы подробне
+
+
+Проверка не проходит, похоже что программа не запускается вообще
+<details><summary>Не запускается, не проходит.  8080 порт не отвечает </summary>
+Testing
+make: Entering directory '/usr/src/app'
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+curl: (7) Failed to connect to localhost port 8080 after 0 ms: Couldn't connect to server
+Warning: Problem : connection refused. Will retry in 5 seconds. 10 retries 
+Warning: left.
+
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+curl: (7) Failed to connect to localhost port 8080 after 0 ms: Couldn't connect to server
+Warning: Problem : connection refused. Will retry in 5 seconds. 9 retries left.
+make: *** [Makefile:13: test] Terminated
+</details>  
+
+___
+
+**Поиск**
+
+Самый непонятный урок
+
+___
+
+**Слой сервисов**
+
+В задании ничего не сказано что делать с  AuthorController.java но он открыт и там есть //BEGIN //END
+
+написано `CRUD уже реализован` - но он НЕ реализован!!!
+
+Тесты контроллеров закоменчены все!
+
+Стоит убрать контроллер если в нем не надо делать правки
+
+___
+
+
+**Аутентификация**
+
+все примеры даны по типу "делай так, просто скопируй себе в проект" а как это рабтает - не написано, какме параметры за что отвечают?
+```
+    public String generateToken(String username) {
+        Instant now = Instant.now();
+        JwtClaimsSet claims = JwtClaimsSet.builder()
+                .issuer("self")
+                .issuedAt(now)
+                .expiresAt(now.plus(1, ChronoUnit.HOURS))
+                .subject(username)
+                .build();
+        return this.encoder.encode(JwtEncoderParameters.from(claims)).getTokenValue();
+    }
+```
+И это во всех примерах, "просто скопируйте себе..." хотелось бы объясниня почему именно так надо и такие настройки.
+
+...нужны RSA-ключи... азчем они нужны? а можно без них? почти все в этой стате описано поверхнастно без обьяснений.
+Для проекта - можно просто скопировать и оно как то будет работать, а как - неизвестно.
+
+И опять сервер не отвечает по 8080. Не запускается программа?
+
+<details><summary>Лог. Не запускается, не проходит.  8080 порт не отвечает </summary>
+Testing
+make: Entering directory '/usr/src/app'
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+curl: (7) Failed to connect to localhost port 8080 after 0 ms: Couldn't connect to server
+Warning: Problem : connection refused. Will retry in 5 seconds. 10 retries 
+Warning: left.
+
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+curl: (7) Failed to connect to localhost port 8080 after 0 ms: Couldn't connect to server
+Warning: Problem : connection refused. Will retry in 5 seconds. 9 retries left.
+make: *** [Makefile:13: test] Terminated
+
+</details>
